@@ -6,6 +6,7 @@ Release 4.15
 	  exceptions, with an optional url property
 	- add hxl.io.HXLAuthorizationException, and throw it for private
 	  CKAN datasets or any 403 Forbidden response
+	- better error reporting for external validation errors
 
 2019-03-04 Release 4.14
 	- report external validation errors (e.g. missing taxonomy)
